Add workaround to force Java 11 compatibility (#173)
* Add workaround to force powermock to work

* Add Sonatype snapshot repo. Update CI to use Java 11

* Remove old reference

Co-authored-by: John Abrahams <jabrah20@jhu.edu>