@@ -133,6 +133,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+              --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
 
         <plugin>
@@ -331,5 +337,16 @@
     <url>https://github.com/eclipse-pass/pass-authz</url>
     <tag>HEAD</tag>
   </scm>
+  
+  <repositories>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
 </project>
